--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Reskin</string>
+
+    <string name="demo_text">This is default text</string>
+    <string name="demo_text_night">This is night text</string>
 </resources>
